<resources>
    <string name="app_name">LogopedieProject2</string>
    <string name="title_activity_mondeling">Mondelinge oefening</string>
    <string name="title_activity_schriftelijk">Schriftelijke oefening</string>
    <string name="title_activity_opnames">Historiek</string>
    <string name="title_activity_nieuwe_patient">Nieuwe patiënt</string>
    <string name="title_activity_login">Log in</string>

    <!-- Activities -->
    <string name="title_activity_schriftelijk_acitivty">SchriftelijkAcitivty</string>
    <string name="title_activity_patient_activity">PatientActivity</string>
    <string name="title_activity_opnames_detail_activity">OpnamesDetailActivity</string>
    <string name="title_activity_login_activity">LoginActivity</string>
    <string name="title_activity_historiek_datum_service">HistoriekDatumService</string>
    <string name="title_activity_laad_patient_mondeling">LaadPatientMondelingActivity</string>

    <!-- Nieuwe Patiënt -->
    <!-- Voornaam -->
    <string name="Voornaamlabel">Voornaam: </string>
    <string name="Voornaamplaceholder">Voornaam</string>

    <!-- Naam -->
    <string name="Naamlabel">Naam: </string>
    <string name="Naamplaceholder">Achternaam</string>

    <!-- Geboortedatum -->
    <string name="Geboortedatumlabel">Geboortedatum: </string>
    <string name="Geboortedatumplaceholder">27/08/1998</string>

    <!-- Testdatum -->
    <string name="Testdatumlabel">Testdatum: </string>
    <string name="Testdatumplaceholder">11/12/2018</string>
    <string name="TestdatumToevoegenButton">Voeg een testdatum toe</string>

    <!-- Chronologische leeftijd -->
    <string name="ChronologischeLeeftijdlabel">Chronologische leeftijd: </string>
    <string name="ChronologischeLeeftijdplaceholder">20 jaar </string>

    <!-- Geslacht -->
    <string name="Geslachtlabel">Geslacht: </string>
    <string name="GeslachtPrompt">Kies een geslacht</string>
    <string-array name="GeslachtArray">
        <item>Man</item>
        <item>Vrouw</item>
        <item>X</item>
    </string-array>

    <!-- Soort afasie -->
    <string name="SoortAfasielabel">Soort afasie</string>
    <string name="SoortAfasiePlaceholder">Kies een afasie</string>

    <!-- Submit -->
    <string name="ButtonSubmit">Opslaan</string>

    <!-- Schriftelijke beschrijving -->
    <!-- Mondelinge beschrijving -->
    <string name="buttonStartOpnemen">Start opnemen</string>
    <string name="buttonStopOpnemen">Stop opnemen</string>
    <string name="buttonOpnameAfspelen">Afspelen</string>
    <string name="buttonOpnameStoppen">Stoppen</string>
    <string name="buttonOpnameOpslaan">Opname opslaan</string>

    <!-- Login -->
    <string name="tekst_registreer">Nog geen account? </string>
    <string name="button_registreer"><u>Registreer</u></string>
    <string name="login_gebruikersnaam">Email/gebruikersnaam: </string>
    <string name="login_gebruikersnaam_placeholder">voorbeeld@voorbeeld.be </string>
    <string name="login_wachtwoord">Wachtwoord: </string>
    <string name="login_wachtwoord_placeholder">Wachtwoord </string>
    <string name="login_button">Log in</string>
    <string name="loguit_button">Log uit</string>

    <!-- Registreer -->
    <string name="registreer_voornaam_label">Voornaam: </string>
    <string name="registreer_voornaam_placeholder">Maarten</string>
    <string name="registreer_achternaam_label">Achternaam: </string>
    <string name="registreer_achternaam_placeholder">Van Lint</string>
    <string name="registreer_email_label">Email: </string>
    <string name="registreer_email_placeholder">mvl@test.be</string>
    <string name="registreer_gebruikersnaam_label">Gebruikersnaam: </string>
    <string name="registreer_gebruikersnaam_placeholder">MaartenVL</string>
    <string name="registreer_wachtwoord_label">Wacthwoord: </string>
    <string name="registreer_wachtwoord_placeholder">wachtwoord</string>
    <string name="registreer_wachtwoord_bevestiging_label">Bevestig wachtwoord: </string>
    <string name="registreer_wachtwoord_bevestiging_placeholder">wachtwoord</string>
    <string name="registreer_button">Registreer</string>

    <!-- Laad Patiënt Activity -->
    <string name="laad_patient_mondeling_text">Kies een patiënt waarmee je een oefening gaat doen.</string>
    <string name="buttonVerder">Verder</string>

    <!-- Detail Historiek -->
    <string name="content_historiek_detail_patientNaam">Patiënt: </string>
    <string name="content_historiek_detail_chronologischeLeeftijd">Leeftijd: </string>
    <string name="content_historiek_detail_scores">Scores: </string>
    <string name="content_historiek_detail_efficientie">Efficiëntie: </string>
    <string name="content_historiek_detail_productiviteit">Productiviteit: </string>
    <string name="content_historiek_detail_substitutiegedrag">Substitutiegedrag: </string>
    <string name="content_historiek_detail_coherentie">Coherentie: </string>
    <string name="content_historiek_detail_opnames">Opname: </string>
    <string name="title_activity_laad_patient_schriftelijk">LaadPatientSchriftelijk</string>
    <string name="title_activity_registreer">Registreer</string>
    <string name="title_activity_login_detail">LoginDetailActivity</string>
</resources>
