<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="be.thomasmore.logopedieproject2.MainActivity">
    <item
        android:id="@+id/activity_mondeling"
        android:orderInCategory="100"
        android:title="@string/title_activity_mondeling"
        app:showAsAction="never" />
    <item
        android:id="@+id/activity_schriftelijk"
        android:orderInCategory="100"
        android:title="@string/title_activity_schriftelijk"
        app:showAsAction="never" />
    <item
        android:id="@+id/activity_historiek"
        android:orderInCategory="100"
        android:title="@string/title_activity_opnames"
        app:showAsAction="never" />
    <item
        android:id="@+id/activity_nieuwe_patient"
        android:orderInCategory="100"
        android:title="@string/title_activity_nieuwe_patient"
        app:showAsAction="never" />
    <item
        android:id="@+id/activity_login"
        android:orderInCategory="100"
        android:title="@string/title_activity_login"
        app:showAsAction="never" />
</menu>
