<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.PatientActivity"
    tools:showIn="@layout/activity_patient"
    android:padding="30dp">


    <!-- Voornaam -->
    <TableRow
        android:id="@+id/voornaamLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/voornaamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Voornaamlabel" />

        <EditText
            android:id="@+id/voornaam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Voornaamplaceholder"
            android:inputType="text" />
    </TableRow>

    <!-- Naam -->
    <TableRow
        android:id="@+id/naamLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/naamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Naamlabel" />

        <EditText
            android:id="@+id/naam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Naamplaceholder"
            android:inputType="text" />
    </TableRow>

    <!-- Geboortedatum -->
    <TableRow
        android:id="@+id/geboortedatumLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/geboortedatumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Geboortedatumlabel" />

        <EditText
            android:id="@+id/geboortedatum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/Geboortedatumplaceholder" />
    </TableRow>

    <!-- Geslacht -->
    <TableRow
        android:id="@+id/geslachtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/geslachtText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/Geslachtlabel" />

        <Spinner
            android:id="@+id/geslacht"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/GeslachtArray"
            android:prompt="@string/GeslachtPrompt" />
    </TableRow>

    <!-- Afasie -->
    <TableRow
        android:id="@+id/afasieLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/afasieText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SoortAfasielabel" />

        <EditText
            android:id="@+id/afasie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/SoortAfasiePlaceholder" />
    </TableRow>

        <Button
            android:id="@+id/buttonsubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonSubmit"
            android:layout_marginTop="100dp"/>


</TableLayout>