<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.HistoriekDetailActivity"
    tools:showIn="@layout/activity_historiek_detail"
    android:padding="15dp">

    <TableRow
        android:paddingBottom="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_historiek_detail_patientNaam"/>
        <TextView
            android:id="@+id/content_historiek_detail_patientNaam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow
        android:paddingBottom="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_historiek_detail_chronologischeLeeftijd"/>
        <TextView
            android:id="@+id/content_historiek_detail_chronologischeLeeftijd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </TableRow>
    <View style="@style/Divider"/>
    <TableRow
        android:paddingTop="15dp"
        android:paddingBottom="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_historiek_detail_scores"/>
        <RelativeLayout>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:paddingBottom="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_historiek_detail_efficientie"/>
                    <TextView
                        android:id="@+id/content_historiek_detail_efficientie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingStart="15dp"/>
                </TableRow>
                <TableRow
                    android:paddingBottom="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_historiek_detail_productiviteit"/>
                    <TextView
                        android:id="@+id/content_historiek_detail_productiviteit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow
                    android:paddingBottom="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_historiek_detail_substitutiegedrag"/>
                    <TextView
                        android:id="@+id/content_historiek_detail_substitutiegedrag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow
                    android:paddingBottom="15dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_historiek_detail_coherentie"/>
                    <TextView
                        android:id="@+id/content_historiek_detail_coherentie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </TableRow>
    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/content_historiek_detail_opnames"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_historiek_detail_opnames"/>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/opnames_detail_play"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="40sp"
            android:layout_marginRight="40sp"
            android:src="@drawable/ic_play_arrow_black_35dp" />
        <ImageView
            android:id="@+id/opnames_detail_pause"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="40sp"
            android:layout_marginRight="40sp"
            android:src="@drawable/ic_pause_black_35dp" />
        <ImageView
            android:id="@+id/opnames_detail_stop"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_stop_black_35dp" />
    </LinearLayout>

</TableLayout>