<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.MondelingActivity"
    tools:showIn="@layout/activity_mondeling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/beschrijving_mondelinge_plaat"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:inputType="text|textMultiLine"
            android:gravity="top"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="4dp">
            <Button
                android:id="@+id/button_start_opnemen"
                android:text="@string/buttonStartOpnemen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_stop_opnemen"
                android:text="@string/buttonStopOpnemen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="25dp">
            <ImageView
                android:id="@+id/button_opname_afspelen"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="40sp"
                android:layout_marginRight="40sp"
                android:src="@drawable/ic_play_arrow_black_35dp" />

            <ImageView
                android:id="@+id/button_opname_pauzeren"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="40sp"
                android:layout_marginRight="40sp"
                android:src="@drawable/ic_pause_black_35dp" />

            <ImageView
                android:id="@+id/button_opname_stoppen"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_stop_black_35dp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonsubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ButtonSubmit"
            android:layout_gravity="center_horizontal"
            android:padding="4dp"
            android:onClick="onSubmitMondeling"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>